# cuda-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: gpus.md  profiling.md  roofline.md  setup.sh
lab/: cli.py
lab/harness/: __init__.py  bench.py  build.py  check.py  paths.py  roofline.py
lab/kernels/: utils.h
lab/kernels/00_relu/: README.md  bench.py  ext.cpp  reference.py  relu.cu  test.py
lab/kernels/01_vecadd/: bench.py  reference.py  test.py  vecadd_v1.cu
lab/kernels/01_vecadd/cuda/: ext.cpp  vecadd.cu
lab/kernels/01_vecadd/triton_dsl/: __init__.py
lab/kernels/02_matmul/: README.md  reference.py  test.py
lab/kernels/02_matmul/cuda/: 1D_coarsening.cu  2D_coarsening.cu  README.md  coarsening.cu  ext.cpp  naive.cu  tiled.cu
lab/kernels/02_matmul/cuda-pmpp/: README.md  coarsening.cu
lab/kernels/common/: cuda_check.h
lab/reports/: 00_relu.md  README.md
