[project]
name = "cuda-lab"
version = "0.1.0"
description = "A small CUDA kernel experiment harness."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ninja",
    "torch",
    "triton; sys_platform != 'darwin'",
    "numpy"
]

[project.scripts]
cuda-lab = "lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lab"]
